# bonsai

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  USAGE.md  clippy.toml  grammars.toml  issue  taplo.toml
.git-issue/: statuses.bash
crates/bonsai-cli/: Cargo.toml
crates/bonsai-cli/src/: main.rs
crates/bonsai-core/: Cargo.toml  build.rs
crates/bonsai-core/src/: compat.rs  lib.rs  parse.rs  scope.rs  supertype.rs  transform.rs  validity.rs
crates/bonsai-core/src/transforms/: dead_definition.rs  delete.rs  mod.rs  unwrap.rs
crates/bonsai-core/tests/: edge_cases.rs  property_tests.rs
crates/bonsai-fuzz/: Cargo.toml
crates/bonsai-fuzz/src/: criteria.rs  lib.rs  target.rs
crates/bonsai-reduce/: Cargo.toml
crates/bonsai-reduce/.hegel/constants/: 9cac743d08a2ad54
crates/bonsai-reduce/src/: cache.rs  config.rs  interest.rs  lib.rs  output.rs  progress.rs  project.rs  queue.rs  reducer.rs
crates/bonsai-reduce/tests/: integration.rs  property_tests.rs  reduce_off_by_one.rs
docs/superpowers/specs/: 2026-03-27-unify-identifiers-transform-design.md
openspec/changes/add-bonsai-core/: design.md  proposal.md  tasks.md
openspec/changes/add-bonsai-core/specs/core/: spec.md
openspec/changes/add-bonsai-core/specs/fuzzer/: spec.md
openspec/changes/add-bonsai-core/specs/grammar-system/: spec.md
openspec/changes/add-bonsai-core/specs/reducer/: spec.md
openspec/changes/add-multi-file-reduction/: proposal.md  tasks.md
openspec/changes/add-multi-file-reduction/specs/reducer/: spec.md
openspec/changes/add-node-types-provider/: proposal.md  tasks.md
openspec/changes/add-node-types-provider/specs/core/: spec.md
openspec/changes/add-parallel-reduction/: proposal.md  tasks.md
openspec/changes/add-parallel-reduction/specs/reducer/: spec.md
openspec/changes/add-query-file-provider/: proposal.md  tasks.md
openspec/changes/add-query-file-provider/specs/core/: spec.md
openspec/changes/add-scope-analysis/: proposal.md  tasks.md
openspec/changes/add-scope-analysis/specs/core/: spec.md
openspec/changes/fix-architecture-cleanup/: proposal.md  tasks.md
openspec/changes/fix-reducer-gaps/: proposal.md  tasks.md
openspec/changes/fix-reducer-gaps/specs/reducer/: spec.md
queries/: NOTICE
