[package]
name = "bonsai-reduce"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bonsai-core = { workspace = true }
tree-sitter = { workspace = true }
xxhash-rust = { workspace = true }
tempfile = { workspace = true }
rayon = { workspace = true }
wait-timeout = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
hegeltest = "0.3.0"
